--- a/produtosa.css
+++ b/produtosa.css
@@ -1,5 +1,6 @@
 .cabeca{
     background: #BBBBBB;
+    padding: 20px 0;
 }
 
 nav li{
@@ -11,6 +12,18 @@ nav a{
     text-transform: uppercase;
     color: rgb(0, 0, 0);
     font-weight: bold;
-    font-size: 21px;
+    font-size: 22px;
     text-decoration: none;
+}
+
+.lista{
+    position: absolute;
+    top: 110px;
+    right: 0px;
+}
+
+.divca{
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
 }
